--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Asia-Holidays</title>
 </head>
 <body>
+    <div class="header"></div>
+    <div class="main">
+        <div>
+            <img src="img/india_photo.png">
+            <p>India</p>
+        </div>
+        <div>
+            <img src="img/nepal_photo.png">
+            <p>Nepal</p>
+        </div>
+        <div>
+            <img src="img/tibet_photo.png">
+            <p>Tibet</p>
+        </div>
+        <div>
+            <img src="img/bhutan_photo.png">
+            <p>Bhutan</p>
+        </div>
+        <div>
+            <img src="img/sri-lanka%20photo.png">
+            <p>Sri Lanka</p>
+        </div>
+        <div>
+            <img src="img/maldives_photo.png">
+            <p>Maldives</p>
+        </div>
+    </div>
+    <div class="footer">
 
+    </div>
 </body>
 </html>
