add footer and align text

--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
 <body>
     <div class="header"></div>
     <div class="main">
-        <div>
+        <div class="image">
             <img src="img/india_photo.png">
             <p>India</p>
         </div>
-        <div>
+        <div  class="image">
             <img src="img/nepal_photo.png">
             <p>Nepal</p>
         </div>
-        <div>
+        <div  class="image">
             <img src="img/tibet_photo.png">
             <p>Tibet</p>
         </div>
-        <div>
+        <div class="image">
             <img src="img/bhutan_photo.png">
             <p>Bhutan</p>
         </div>
-        <div>
+        <div  class="image">
             <img src="img/sri-lanka%20photo.png">
             <p>Sri Lanka</p>
         </div>
-        <div>
+        <div  class="image">
             <img src="img/maldives_photo.png">
             <p>Maldives</p>
         </div>
     </div>
     <div class="footer">
-
+        <p>Copyright(c) asia-holidays.com. 2010</p>
     </div>
 </body>
 </html>
