change borders for image and change paragraph to label

--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
     <div class="header"></div>
     <div class="main">
         <div class="image">
-            <img src="img/india_photo.png">
-            <p>India</p>
+            <img src="img/india_photo.png" id="india">
+            <label for="india">India</label>
         </div>
         <div  class="image">
-            <img src="img/nepal_photo.png">
-            <p>Nepal</p>
+            <img src="img/nepal_photo.png" id="nepal">
+            <label for="nepal">Nepal</label>
         </div>
         <div  class="image">
-            <img src="img/tibet_photo.png">
-            <p>Tibet</p>
+            <img src="img/tibet_photo.png" id="tibet">
+            <label for="tibet">Tibet</label>
         </div>
         <div class="image">
-            <img src="img/bhutan_photo.png">
-            <p>Bhutan</p>
+            <img src="img/bhutan_photo.png" id="bhutan">
+            <label for="bhutan">Bhutan</label>
         </div>
         <div  class="image">
-            <img src="img/sri-lanka%20photo.png">
-            <p>Sri Lanka</p>
+            <img src="img/sri-lanka%20photo.png" id="sri-lanka">
+            <label for="sri-lanka">Sri Lanka</label>
         </div>
         <div  class="image">
-            <img src="img/maldives_photo.png">
-            <p>Maldives</p>
+            <img src="img/maldives_photo.png" id="maldives">
+            <label for="maldives">Maldives</label>
         </div>
     </div>
     <div class="footer">
