add logo in header

--- a/index.html
+++ b/index.html
@@ -6,30 +6,39 @@
     <title>Asia-Holidays</title>
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <div class="header-left">
+            <div class="image-logo">
+                <img src="img/logo.png" id="travel-asia" alt="travel-asia">
+                <label for="travel-asia" class="label-logo">Travel Asia</label>
+            </div>
+            <img src="img/palm%20tree.png" class="palm" alt="palm">
+        </div>
+        <div class="header-right"></div>
+    </div>
     <div class="main">
         <div class="image">
-            <img src="img/india_photo.png" id="india">
+            <img src="img/india_photo.png" class="country" id="india" alt="india">
             <label for="india">India</label>
         </div>
         <div  class="image">
-            <img src="img/nepal_photo.png" id="nepal">
+            <img src="img/nepal_photo.png" class="country" id="nepal" alt="nepal">
             <label for="nepal">Nepal</label>
         </div>
         <div  class="image">
-            <img src="img/tibet_photo.png" id="tibet">
+            <img src="img/tibet_photo.png" class="country" id="tibet" alt="tibet">
             <label for="tibet">Tibet</label>
         </div>
         <div class="image">
-            <img src="img/bhutan_photo.png" id="bhutan">
+            <img src="img/bhutan_photo.png" class="country" id="bhutan" alt="bhutan">
             <label for="bhutan">Bhutan</label>
         </div>
         <div  class="image">
-            <img src="img/sri-lanka%20photo.png" id="sri-lanka">
+            <img src="img/sri-lanka%20photo.png" class="country" id="sri-lanka" alt="sri-lanka">
             <label for="sri-lanka">Sri Lanka</label>
         </div>
         <div  class="image">
-            <img src="img/maldives_photo.png" id="maldives">
+            <img src="img/maldives_photo.png" class="country" id="maldives" alt="maldives">
             <label for="maldives">Maldives</label>
         </div>
     </div>
