add contacts to header

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Asia-Holidays</title>
 </head>
@@ -14,7 +15,13 @@
             </div>
             <img src="img/palm%20tree.png" class="palm" alt="palm">
         </div>
-        <div class="header-right"></div>
+        <div class="header-right">
+            <div class="contacts">
+                <div>Contact Us</div>
+                <div>+12 34 567 8910</div>
+                <div>info@asia-holidays.com</div>
+            </div>
+        </div>
     </div>
     <div class="main">
         <div class="image">
